<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:orientation="vertical"
 >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/kb9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/kb9">

            </ImageView>

            <ImageView
                android:id="@+id/ReturnButton"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/ic_fleche"
                android:textStyle="bold"
                android:tint="@color/white">

            </ImageView>

            <TextView
                android:id="@+id/nameLyt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:padding="15dp"
                android:text="Karim Benzema"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout1"
        android:background="@color/silver"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/fragment_container_view2"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:elevation="8dp"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/nameLyt1"
                style="TitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:text="Karim Benzema"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/ic_location"
                    android:tint="@color/red">

                </ImageView>

                <TextView
                    android:id="@+id/addressInput"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Saint pierre du mont à 5km" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/ic_phone"
                    android:tint="@color/red"
                    tools:ignore="ExtraText">

                </ImageView>

                <TextView
                    android:id="@+id/phoneNumberLyt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="+33 6 86 57 90 14 " />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="39dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="30dp"
                    android:src="@drawable/ic_mail"
                    android:tint="@color/red">

                </ImageView>

                <TextView
                    android:id="@+id/avatarUrlLyt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="www.facebook.fr/KBenzema" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_container_view3"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            android:elevation="5dp"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="A propos de moi"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/aboutMeLyt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="Bonjour! je souhaiterais faire de la marche nordidique Pas initié, je recherche une ou plusieurs personnes susceptibles de m'accompagner! J'aime les jeux de cartes tels la belote et le tarot." />

        </LinearLayout>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        app:cardCornerRadius="40dp"
        android:layout_marginTop="250dp"
        android:layout_marginRight="20dp"
        android:id="@+id/icon"
        tools:ignore="MissingClass">

        <ImageView
            android:id="@+id/button_etoile"
            android:layout_alignParentRight="true"
            android:tint="@color/orange"
            android:padding="22dp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_etoile" />
    </androidx.cardview.widget.CardView>
</RelativeLayout>